Add footer and home components; implement add post functionality and update routing

--- a/Student_Portal/src/app/headerbar/headerbar.component.css
+++ b/Student_Portal/src/app/headerbar/headerbar.component.css
@@ -1,9 +1,8 @@
-.container{
+.container1{
  display: flex;
  justify-content: space-between;
     align-items: center;
     background-color: #97c4e4;
-    padding: 10px 0;
     color: black;
     height: 48px;
 }
