--- a/Student_Portal/src/app/headerbar/headerbar.component.html
+++ b/Student_Portal/src/app/headerbar/headerbar.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container1">
  <div class="container-body">
     <mat-sidenav-container class="example-container">
         <mat-sidenav class="sidenavbar" mode="over" [(opened)]="isOpened" >
@@ -73,12 +73,3 @@
  </div>
  
 </div>
-
-<div class="container-footer" style="margin-top:630px ;">
-    <div class="footer">
-        <div class="footer-text">
-            <p>© 2025 Student Portal By Akash  Vyavhare</p>
-        </div>
-    </div>
-
- </div>
