--- a/Student_Portal/src/app/add-post/add-post.component.html
+++ b/Student_Portal/src/app/add-post/add-post.component.html
@@ -1,12 +1,21 @@
-<form class="col-md-6 offset-md-3" >
+<form class="col-md-6 offset-md-3" #form="ngForm" (ngSubmit)="onSubmit(form)">
     <h2>Add Post</h2>
     <div class="form-group">
         <label for="title">Title</label>
-        <input type="text" class="form-control" id="title" name="title"  [(ngModel)]="title" >
+        <input type="text" class="form-control" id="title" name="title" [(ngModel)]="post.title" placeholder="Title" required minlength="5" #title="ngModel">
+        <div>
+            <small *ngIf="form.submitted && !title.valid && title.touched" class="text-danger">Title is required! </small>
+            <small *ngIf="form.submitted && title.errors?.['minlength']" class="text-danger">Title should be at least 5 characters</small>
+        </div>
     </div>
+     
     <div class="form-group">
         <label for="content">Content</label>
-        <textarea class="form-control" id="content" name="content" [(ngModel)]="content" ></textarea>
+        <textarea class="form-control" id="content" name="content" [(ngModel)]="post.content" placeholder="write Something......." required minlength="20" #content="ngModel"></textarea>
+        <div>
+            <small *ngIf="form.submitted && !content.valid && content.touched" class="text-danger">Content is required!</small>
+            <small *ngIf="form.submitted && content.errors?.['minlength']" class="text-danger"> Content should be at least 20 characters</small>
+        </div>
     </div>
     <button type="submit" class="btn btn-primary" (click)="addPost()">Submit</button>
 </form>
