--- a/Student_Portal/src/app/headerbar/headerbar.component.css
+++ b/Student_Portal/src/app/headerbar/headerbar.component.css
@@ -5,6 +5,8 @@
     background-color: #97c4e4;
     color: black;
     height: 48px;
+    position: sticky;
+    top: 0;
 }
 .container-body{
     display: contents;
