--- a/Student_Portal/src/app/home/home.component.css
+++ b/Student_Portal/src/app/home/home.component.css
@@ -6,7 +6,7 @@
 }
 .addPost_btn{
     height: 42px;
-    width: 100px;
+    width: 20%;
     background-color: #1ecac7;
     top: 20px;
     font-size: 16px;
