--- a/Student_Portal/src/app/home/home.component.html
+++ b/Student_Portal/src/app/home/home.component.html
@@ -1,5 +1,11 @@
 <div>
     <div class="addPost">
-        <button class="addPost_btn" mat-button [routerLink]="'/add-post'">Add New Post</button>
+        <button class="addPost_btn" mat-button [routerLink]="'/add-post'">Add New Post_T</button>
+        <button class="addPost_btn" mat-button [routerLink]="'/add-post-reactive'">Add New Post_R</button>
+        <button  mat-button (click)="addPostR()"> form</button>
     </div>
+    <!-- <div class="addPost">
+        <button class="addPost_btn" mat-button [routerLink]="'/add-post-reactive'">Add New Post_R</button>
+    </div> -->
+    
 </div>
