Add login page assets, refactor app structure, and implement authentication module

--- a/Student_Portal/src/app/add-post-reactive/add-post-reactive.component.css
+++ b/Student_Portal/src/app/add-post-reactive/add-post-reactive.component.css
@@ -24,3 +24,12 @@
     columns: #000;
     margin-top: 10px;
 }
+.container{
+    height: 100%;
+    overflow: hidden;
+    background-color:#97c4e4;
+}
+.text-danger{
+    color: red;
+    font-weight: bold;
+}
