--- a/Student_Portal/src/app/add-post-reactive/add-post-reactive.component.html
+++ b/Student_Portal/src/app/add-post-reactive/add-post-reactive.component.html
@@ -1,6 +1,7 @@
 
-    <div class="container">
-        <h2 class="logintitle">User Login Portal</h2>
+    <div class="container"  >
+      <!-- style="background-image: url('assets/woodbackground.jpg');" -->
+      <h2 class="logintitle">User Login Portal</h2>   
         <form [formGroup]="reactiveForm" (ngSubmit)="onSubmit()">
           <div class="form-group" >
             <label for="name">Name</label>
@@ -8,10 +9,10 @@
                 
               <input matInput placeholder="Name" formControlName="name">
             </mat-form-field>
-            <div  *ngIf="reactiveForm.get('name')?.invalid && reactiveForm.get('name')?.touched">
-              <small class="text-danger">Name is required.</small >
-            </div>
-          </div>
+            <div *ngIf="reactiveForm.get('name')?.invalid && reactiveForm.get('name')?.touched"></div>
+              <small class="text-danger" *ngIf="reactiveForm.get('name')?.errors?.['required']">Name is required.</small>
+              <small class="text-danger" *ngIf="reactiveForm.get('name')?.errors?.['minlength']">Name must be at least 3 characters long.</small>
+            </div>  
       
           <div class="form-group">
             <label for="email">Email</label>
@@ -22,6 +23,17 @@
               <small class="text-danger">Enter a valid email.</small>
             </div>
           </div>
+          <div claass="form-group">
+            <label for="mobileNumber">Mobile Number</label>
+            <mat-form-field class="example-full-width">
+              <input matInput placeholder="mobileNumber" formControlName="mobileNumber">
+            </mat-form-field>
+            <div *ngIf="reactiveForm.get('mobileNumber')?.invalid && reactiveForm.get('mobileNumber')?.touched">
+              <small class="text-danger">Enter a valid phone number.</small>
+            </div>
+
+          </div>
+          
       
           <div class="form-group">
             <label for="password">Password</label>
@@ -32,8 +44,18 @@
               <small class="text-danger">Password must be at least 8 characters long.</small>
             </div>
           </div>
-      <div  class="form-group">
-        <button mat-raised-button color="primary" type="submit" [disabled]="reactiveForm.invalid" >Submit</button>
+          <div class="form-group">
+            <label for="confirmPassword">Confirm Password</label>
+            <mat-form-field class="example-full-width">
+              <input matInput placeholder="Confirm Password" type="password" formControlName="confirmPassword">
+            </mat-form-field>
+            <div *ngIf="reactiveForm.get('confirmPassword')?.invalid && reactiveForm.get('confirmPassword')?.touched">
+              <small class="text-danger">Passwords do not match.</small>
+            </div>
+
+          </div>
+      <div  class="form-group" style="margin-bottom: 10px; text-align: end;">
+        <button mat-raised-button color="primary" type="submit" [disabled]="reactiveForm.invalid" >Register</button>
       </div>
           
         </form>
