--- a/Student_Portal/src/app/headerbar/headerbar.component.html
+++ b/Student_Portal/src/app/headerbar/headerbar.component.html
@@ -45,7 +45,7 @@
                 </mat-list-item>
                 <mat-list-item>
                     <mat-icon matListIcon>exit_to_app</mat-icon>
-                    <a matLine routerLink="/logout">Logout</a>
+                    <a matLine (click)="logout()">Logout</a>
                 </mat-list-item>
             </mat-nav-list>
 
@@ -65,6 +65,7 @@
         <mat-icon>search</mat-icon>
     </button>
  </div>
+ <div>{{userName}}</div>
  <div class="align-center">
     <button mat-icon-button class="example-icon" aria-label="example icon-button with menu icon">
         <mat-icon>message</mat-icon>
