--- a/Student_Portal/src/app/layout/headerbar/headerbar.component.html
+++ b/Student_Portal/src/app/layout/headerbar/headerbar.component.html
@@ -1,63 +1,10 @@
 <div class="container1">
  <div class="container-body">
-    <mat-sidenav-container class="example-container">
-        <mat-sidenav class="sidenavbar" mode="over" [(opened)]="isOpened" >
-            <mat-nav-list class="navList">
-                <mat-list-item>
-                    <mat-icon matListIcon>account_circle</mat-icon>
-                    <a matLine routerLink="/my-account">My Account</a>
-                </mat-list-item>
-                <mat-list-item>
-                    <mat-icon matListIcon>description</mat-icon>
-                    <a matLine routerLink="/update-cv">Update CV</a>
-                </mat-list-item>
-                <mat-list-item>
-                    <mat-icon matListIcon>timeline</mat-icon>
-                    <a matLine routerLink="/activity">Activity</a>
-                </mat-list-item>
-                <mat-list-item>
-                    <mat-icon matListIcon>group</mat-icon>
-                    <a matLine routerLink="/friends">Friends</a>
-                </mat-list-item>
-                <mat-list-item>
-                    <mat-icon matListIcon>people</mat-icon>
-                    <a matLine routerLink="/following">Following</a>
-                </mat-list-item>
-                <mat-list-item>
-                    <mat-icon matListIcon>work</mat-icon>
-                    <a matLine routerLink="/applied-job-status">Applied Job Status</a>
-                </mat-list-item>
-                <mat-list-item>
-                    <mat-icon matListIcon>search</mat-icon>
-                    <a matLine routerLink="/search-recruiter-post">Search Recruiter Post</a>
-                </mat-list-item>
-                <mat-list-item>
-                    <mat-icon matListIcon>settings</mat-icon>
-                    <a matLine routerLink="/settings">Settings</a>
-                </mat-list-item>
-                <mat-list-item>
-                    <mat-icon matListIcon>policy</mat-icon>
-                    <a matLine routerLink="/privacy-policy">Privacy Policy</a>
-                </mat-list-item>
-                <mat-list-item>
-                    <mat-icon matListIcon>gavel</mat-icon>
-                    <a matLine routerLink="/terms-and-conditions">Terms and Conditions</a>
-                </mat-list-item>
-                <mat-list-item>
-                    <mat-icon matListIcon>exit_to_app</mat-icon>
-                    <a matLine (click)="logout()">Logout</a>
-                </mat-list-item>
-            </mat-nav-list>
-
-        </mat-sidenav>
-
- 
-        <button mat-icon-button class="example-icon" aria-label="example icon-button with menu icon" (click)="toggleSidenav()">
-            <mat-icon>menu</mat-icon>
-
-        </button>
-    </mat-sidenav-container>
     
+    <button mat-icon-button class="example-icon" aria-label="example icon-button with menu icon" (click)="toggleSidenav()">
+        <mat-icon>menu</mat-icon>
+
+    </button>
  </div>
  <div class="align-center" appearance="fill">
     <input class="search" placeholder="Search"  [formControl]="searchControl" >
@@ -65,7 +12,7 @@
         <mat-icon>search</mat-icon>
     </button>
  </div>
- <div>{{userName}}</div>
+ <div class="userName">{{userName}}</div>
  <div class="align-center">
     <button mat-icon-button class="example-icon" aria-label="example icon-button with menu icon">
         <mat-icon>message</mat-icon>
