--- a/Student_Portal/src/app/auth/login/login.component.html
+++ b/Student_Portal/src/app/auth/login/login.component.html
@@ -36,11 +36,13 @@
     
                     <label>
                         <input type="checkbox" formControlName="rememberMe" name="rememberMe"> Remember Me
+                        
                     </label>
-                    <a style="margin-left: 50px;" href="#">Forgot Password?</a>
                     <div *ngIf="loginForm.controls['rememberMe']?.invalid && loginForm.controls['rememberMe']?.touched">
                         <small style="color: red">You must accept the terms</small>
-                      </div>
+                    </div>
+                    <a style="margin-left: 50px;" href="userSignUp">Register Me?</a>
+                    
                 </div>
     
                 <div class="form-group" >
